--- a/_includes/relativity.html
+++ b/_includes/relativity.html
@@ -3,12 +3,12 @@
 <ul class="relativity">
 {% if page.previous %}
 <td>
-	<li><a href="{{ page.previous.url }}/" title="{{ page.previous.title }}" class="prev" rel="prev">&larr; previous article</a></li>
+	<a href="{{ page.previous.url }}/" title="{{ page.previous.title }}" class="prev" rel="prev">&larr; previous article</a>
 	</td>
 {% endif %}
 {% if page.next %}
 <td>
-	<li><a href="{{ page.next.url }}/" title="{{ page.next.title }}" class="next" rel="next">next article &rarr;</a></li>
+	<a href="{{ page.next.url }}/" title="{{ page.next.title }}" class="next" rel="next">next article &rarr;</a>
 	</td>
 {% endif %}
 </ul>
