--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,15 +1,17 @@
 {% if paginator.previous_page or paginator.next_page %}
-<table>
+
 <ul class="relativity">
+<table>
 {% if paginator.next_page %}
 	<td><a href="/page{{ paginator.next_page }}/" class="prev" rel="prev">&larr; older articles</a></td>
 {% endif %}
 {% if paginator.previous_page and paginator.page != 2 %}
-	<td><a href="/page{{ paginator.previous_page }}/" class="next" rel="next">newer articles &rarr;</a></td>
+	<td align="right"><a href="/page{{ paginator.previous_page }}/" class="next" rel="next">newer articles &rarr;</a></td>
 {% endif %}
 {% if paginator.previous_page and paginator.page == 2 %}
-	<td><a href="/" class="next" rel="next">newer articles &rarr;</a></td>
+	<td align="right"><a href="/" class="next" rel="next">newer articles &rarr;</a></td>
 {% endif %}
-</ul>
 </table>
+</ul>
+
 {% endif %}
