--- a/_includes/themes/kd/page.html
+++ b/_includes/themes/kd/page.html
@@ -1,5 +1,6 @@
 <div class="page-header">
    <h1>{{ page.title }}</h1>
+   <div class="date">{{post.date | date: "%A, %d %B %Y" }}</div>
 </div>
 
 <div class="row">
