--- a/_includes/themes/kd/post.html
+++ b/_includes/themes/kd/post.html
@@ -1,5 +1,6 @@
 <div class="page-header">
    <h1>{{ page.title }}</h1>
+   <div class="date">{{post.date | date: "%A, %d %B %Y" }}</div>
 </div>
 
 <div class="row">
@@ -27,7 +28,7 @@
   
   <div class="span4">
     <h4>Published</h4>
-    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
+    <div class="date"><span>{{post.date | date: "%A, %d %B %Y" }}</span></div>
 
   {% unless page.tags == empty %}
     <h4>Tags</h4>
