--- a/_includes/themes/kd/page.html
+++ b/_includes/themes/kd/page.html
@@ -1,6 +1,6 @@
 <div class="page-header">
    <h1>{{ page.title }}</h1>
-   <div class="date">{{post.date | date: "%A, %d %B %Y" }}</div>
+    <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
 </div>
 
 <div class="row">
@@ -9,5 +9,6 @@
   </div>
   <div class="span3">
   	{% include themes/kd/sidebar.html %}
+	{{page.tags}}
   </div>
 </div>
