--- a/_includes/themes/kd/post.html
+++ b/_includes/themes/kd/post.html
@@ -27,6 +27,9 @@
   </div>
   
   <div class="span4">
+  <h4>Published</h4>
+  <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
+  
   {% unless page.tags == empty %}
     <h4>Tags</h4>
     <ul class="tag_box">
