update comment and sidebar

--- a/_includes/themes/kd/sidebar.html
+++ b/_includes/themes/kd/sidebar.html
@@ -1,5 +1,10 @@
 <div class="sidebar-item">
 	<h3>最近的文章</h3>
+	<ul>
+  {% for post in site.posts limit: 5 %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
 </div>
 <div class="sidebar-item">
 	<h3>最近的评论</h3>
