--- a/_includes/themes/kd/sidebar.html
+++ b/_includes/themes/kd/sidebar.html
@@ -1,14 +1,20 @@
 <div class="sidebar-item">
-	<h3>最近的文章</h3>
+	<ul><h3>最近的文章</h3></ul>
 	<ul>
   {% for post in site.posts limit: 5 %}
     <li><a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
 </div>
+
 <div class="sidebar-item">
-	<h3>最近的评论</h3>
-</div>
-<div class="sidebar-item">
-	<h3>订阅</h3>
+	<ul><h3>订阅</h3></ul>
+	<ul>
+	     <a href="http://feeds.feedburner.com/kdii">
+                <img src="/assets/icon/rss.png" alt="Subscribe to RSS Feed" />
+              </a>
+	    <a href="https://twitter.com/kdii">
+                <img src="/assets/icon/twitter.png" alt="Follow us on Twitter" />
+              </a>
+    </ul>
 </div>
