--- a/_includes/themes/kd/default.html
+++ b/_includes/themes/kd/default.html
@@ -46,8 +46,8 @@
       </div>
 	 
       <footer>
-        <p><b>&copy; kd's blog 2013</b> 
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+        <p>&copy; kd's blog 2013 
+          powered by <a href="http://github.com/kdii" target="_blank">Github</a>,<a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
       </footer>
